refactor: 네이밍 수정 및 불필요한 코드 삭제